  * All paths required use $scidDataDir/$scidConfigDir variable if possible. This allows more seemless usage from an USB drive on Windows where the drive letters change all the time.
  * Improve GUI for non-unique game IDs.
  * Deleted games are now ignored in search of a sync-target.
  * Fix: offline state file kept growing infinitely
- Tools Menu
  * Remove Novag entry
  * Add "Connect Hardware" 
  * Add "Connect Hardware / Configure" usable for Novag & Input Engine
  * Add "Connect Hardware / Input Engine"
  * Add "Connect Hardware / Novag Citrine"
  * Make hardware connect buttons visibility configurable 
    (remove it needs restart)
- Novag Citrine
  * Remove own config (replaced by unified dialogue)
  * Use unified "Connect Hardware" dialoge and parameters thereof
  * Use "hardware connect" button
  * Set button images according to current state
- Input Engine Support:
  * Rework of GUI
  * Handle "illegal moves" (warn user, ignore them)
  * Add "rotate board"
  * Add Synchronise button
  * Add Miniboard to the console
  * Add NLS
  * Add Support for DGT XL external clock
  * Colour various states in move area
  * To use a DGT Electronic Chess Board  dgtdrv V1.21 or higher is
    required. (http://dgtdrv.sf.net)
  * Make window dockable
- Docs
  * Update Novag part (as far as possible)
  * Add "Connect Hardware" with subtopics to english help
  * Add "Input Engine" including some remarks about DGT
- NLS
  * Add tags for all hardware connection dialogues
  * German translation for the tags added
- Database information
  * Add the ability to write Dublin Core metadata for a Scid database
  by means of Tools / Database information. This includes reading
  metadata from a sme file.
  * menu item disabled for future use
- Mask (Tree window) : 
	* added menu entry to remove NAG value for a move
	* added entry in popup menu to enter moves not present in Tree
	* In training mode, game is annotated if the user made poor moves (related to values in Mask)